Added a couple more constants. Only a few of which are ChipRead status'. Added functions to the Database interface. Notable: ResetSegments - when the DivisionSpecific segments option changes this gets reset. AddTimingResults - multiple insertions. ResetTimingResults - so we can recalculate. Can be done for all in an event, or by bib+event. Update/SetChipReadStatuses - multiples. Modified version of database to better deal with issues that might come along. Modified TimeResults query so it gets more information. Changed how ChipRead generates it's name string and Status string. Added comparison methods to Participant so we can sort things in different ways. Added more information to TimeResult. Added comparison method to TimeResult so we can properly sort it. Added code to the TimingWorker so it properly calculates and inserts results into the database. MainWindow now waits to start the worker that processes timing results until it's loaded.

--- a/EventDirector/UI/MainPages/ParticipantsPage.xaml
+++ b/EventDirector/UI/MainPages/ParticipantsPage.xaml
@@ -21,6 +21,12 @@
                 <Button Name="Export" Content="Export" FontSize="16" Height="35" Margin="10,10,10,10" Click="Export_Click" />
                 <Label Content="View only" FontSize="16" Margin="10,10,10,0" HorizontalContentAlignment="Center"/>
                 <ComboBox Name="DivisionBox" FontSize="16" Margin="10,0,10,10" SelectionChanged="DivisionBox_SelectionChanged" />
+                <Label Content="Sort By" FontSize="16" Margin="10,0,10,0" HorizontalContentAlignment="Center"/>
+                <ComboBox Name="SortBox" FontSize="16" Margin="10,0,10,10" SelectionChanged="SortBox_SelectionChanged" SelectedIndex="0">
+                    <ComboBoxItem Content="Division" />
+                    <ComboBoxItem Content="Name" />
+                    <ComboBoxItem Content="Bib" />
+                </ComboBox>
                 <Button Name="Add" Content="Add" FontSize="16" Height="35" Margin="10,10,10,10" Click="Add_Click"/>
                 <Button Name="Modify" Content="Modify" FontSize="16" Height="35" Margin="10,10,10,10" Click="Modify_Click"/>
                 <Button Name="Remove" Content="Remove" FontSize="16" Height="35" Margin="10,10,10,10" Click="Remove_Click"/>
