--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="750" Width="1300" MinHeight="600" MinWidth="800"
-        Closing="Window_Closing">
+        Title="Event Director" Height="750" Width="1300" MinHeight="600" MinWidth="800"
+        Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140" />
