--- a/EventDirector/UI/MainWindow.xaml
+++ b/EventDirector/UI/MainWindow.xaml
@@ -15,7 +15,7 @@
             <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="160" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
             <Button x:Name="timingButton" Content="Timing" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="TimingButton_Click" AutomationProperties.HelpText="Display Timing" FontSize="16" VerticalContentAlignment="Center" Height="35" />
             <StackPanel Name="timingChildren" HorizontalAlignment="Center" Margin="10,0,0,0" Visibility="Collapsed">
-                <Button Name="announcer" Content="Announcer Window" HorizontalAlignment="Center" Margin="0,0,0,10" Width="150" Click="ManualEntry_Click" AutomationProperties.HelpText="Manual Entry" FontSize="12" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
+                <Button Name="announcer" Content="Announcer Window" HorizontalAlignment="Center" Margin="0,0,0,10" Width="150" Click="Announcer_Click" AutomationProperties.HelpText="Announcer Window" FontSize="12" VerticalContentAlignment="Center" Height="35" IsEnabled="False"/>
             </StackPanel>
             <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
             <Button x:Name="bibsButton" Content="Bibs" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="BibsButton_Click" AutomationProperties.HelpText="Display Bibs" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
