Added chip time to time_result database table and TimeResult class for tracking the difference between gun time and the runner's start chip read. Created a method to get all of the Start segment results from the database. Updated TimeResult class to accommodate some of the changes in TimingWorker. Moved the functionality of creating a TimeResult class into it's own method so we don't have to change it everywhere. TimingWorker now calculates chip time for reads when it calculates their actual time.

--- a/EventDirector/UI/Timing/TimingResultsPage.xaml
+++ b/EventDirector/UI/Timing/TimingResultsPage.xaml
@@ -9,16 +9,17 @@
       Title="TimingResultsPage">
 
     <Grid>
-        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Loaded="UpdateListView_Loaded" HorizontalContentAlignment="Center">
+        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Loaded="UpdateListView_Loaded" HorizontalContentAlignment="Center" FontSize="12">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Loc" Width="80" DisplayMemberBinding="{Binding LocationName}" />
-                    <GridViewColumn Header="Occ" Width="30" DisplayMemberBinding="{Binding Occurrence}"/>
-                    <GridViewColumn Header="ID" Width="95" DisplayMemberBinding="{Binding Identifier}" />
-                    <GridViewColumn Header="Name" Width="150" DisplayMemberBinding="{Binding ParticipantName}" />
+                    <GridViewColumn Header="Loc" Width="70" DisplayMemberBinding="{Binding LocationName}" />
+                    <GridViewColumn Header="Occ" Width="25" DisplayMemberBinding="{Binding Occurrence}"/>
+                    <GridViewColumn Header="ID" Width="80" DisplayMemberBinding="{Binding Identifier}" />
+                    <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding ParticipantName}" />
                     <GridViewColumn Header="System Time" Width="130" DisplayMemberBinding="{Binding SysTime}" />
                     <GridViewColumn Header="Time" Width="90" DisplayMemberBinding="{Binding Time}" />
-                    <GridViewColumn Header="Segment" Width="80" DisplayMemberBinding="{Binding SegmentName}" />
+                    <GridViewColumn Header="ChipTime" Width="90" DisplayMemberBinding="{Binding ChipTime}" />
+                    <GridViewColumn Header="Segment" Width="70" DisplayMemberBinding="{Binding SegmentName}" />
                     <GridViewColumn Header="Division" Width="80" DisplayMemberBinding="{Binding DivisionName}" />
                 </GridView>
             </ListView.View>
