--- a/EventDirector/UI/Timing/TimingResultsPage.xaml
+++ b/EventDirector/UI/Timing/TimingResultsPage.xaml
@@ -14,13 +14,17 @@
                 <GridView>
                     <GridViewColumn Header="Loc" Width="70" DisplayMemberBinding="{Binding LocationName}" />
                     <GridViewColumn Header="Occ" Width="25" DisplayMemberBinding="{Binding Occurrence}"/>
-                    <GridViewColumn Header="ID" Width="80" DisplayMemberBinding="{Binding Identifier}" />
-                    <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding ParticipantName}" />
                     <GridViewColumn Header="System Time" Width="130" DisplayMemberBinding="{Binding SysTime}" />
                     <GridViewColumn Header="Time" Width="90" DisplayMemberBinding="{Binding Time}" />
                     <GridViewColumn Header="ChipTime" Width="90" DisplayMemberBinding="{Binding ChipTime}" />
-                    <GridViewColumn Header="Segment" Width="70" DisplayMemberBinding="{Binding SegmentName}" />
+                    <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding ParticipantName}" />
+                    <GridViewColumn Header="Pl" Width="25" DisplayMemberBinding="{Binding PlaceStr}"/>
+                    <GridViewColumn Header="G" Width="25" DisplayMemberBinding="{Binding Gender}" />
+                    <GridViewColumn Header="GP" Width="25" DisplayMemberBinding="{Binding GenderPlaceStr}"/>
+                    <GridViewColumn Header="Age Grp" Width="55" DisplayMemberBinding="{Binding AgeGroupName}" />
+                    <GridViewColumn Header="AP" Width="25" DisplayMemberBinding="{Binding AgePlaceStr}"/>
                     <GridViewColumn Header="Division" Width="80" DisplayMemberBinding="{Binding DivisionName}" />
+                    <GridViewColumn Header="Segment" Width="70" DisplayMemberBinding="{Binding SegmentName}" />
                 </GridView>
             </ListView.View>
         </ListView>
