--- a/EventDirector/UI/Timing/TimingRawReadsPage.xaml
+++ b/EventDirector/UI/Timing/TimingRawReadsPage.xaml
@@ -27,13 +27,10 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button HorizontalAlignment="Right" Name="IgnoreButton" Content="Ignore Reads" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Grid.Column="0" Click="IgnoreButton_Click"/>
-            <Button HorizontalAlignment="Left" Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Grid.Column="1" Click="DoneButton_Click"/>
-        </Grid>
+        <DockPanel LastChildFill="False" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Name="IgnoreButton" Content="Ignore Reads" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
+            <Button Name="Shift" Content="Edit" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="Shift_Click" />
+            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="DoneButton_Click"/>
+        </DockPanel>
     </Grid>
 </Page>
