Added searching to the participants page. Removed some superfluous code in the ImportFileWindow class. Ensure that you notify the TimingWorker of new people when importing participants. You can now double click a participant to edit them on the participants page. Modify Participant window now keeps track of whether or not bibs were changed/added and tells the database to reset bibs if they *may* have changed. It also notifies the authorities that they need to look at their data again.

--- a/EventDirector/UI/MainPages/ParticipantsPage.xaml
+++ b/EventDirector/UI/MainPages/ParticipantsPage.xaml
@@ -17,20 +17,21 @@
                 <Button Name="ImportCSV" Content="Import" FontSize="16" Height="35" Margin="10,10,10,10" Click="ImportCSV_Click"/>
                 <Button Name="ImportExcel" Content="Import" FontSize="16" Height="35" Margin="10,10,10,10" Click="ImportExcel_Click"  Visibility="Collapsed"/>
                 <Button Name="Export" Content="Export" FontSize="16" Height="35" Margin="10,10,10,10" Click="Export_Click" />
-                <Label Content="View only" FontSize="16" Margin="10,10,10,0" HorizontalContentAlignment="Center"/>
+                <Label Content="View only" FontSize="16" Margin="10,0,10,0" HorizontalContentAlignment="Center"/>
                 <DockPanel Name="DivisionBoxHolder" />
-                <ComboBox Name="DivisionBox" FontSize="16" Margin="10,0,10,10" SelectionChanged="DivisionBox_SelectionChanged" />
-                <Label Content="Sort By" FontSize="16" Margin="10,0,10,0" HorizontalContentAlignment="Center"/>
+                <ComboBox Name="DivisionBox" FontSize="16" Margin="10,0,10,0" SelectionChanged="DivisionBox_SelectionChanged" />
+                <Label Content="Sort By" FontSize="16" Margin="10,0,00,0" HorizontalContentAlignment="Center"/>
                 <ComboBox Name="SortBox" FontSize="16" Margin="10,0,10,10" SelectionChanged="SortBox_SelectionChanged" SelectedIndex="0">
                     <ComboBoxItem Content="Division" />
                     <ComboBoxItem Content="Name" />
                     <ComboBoxItem Content="Bib" />
                 </ComboBox>
-                <Button Name="Add" Content="Add" FontSize="16" Height="35" Margin="10,10,10,10" Click="Add_Click"/>
+            <TextBox Name="SearchBox" Margin="10,0,10,0" TextChanged="SearchBox_TextChanged" FontSize="16" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Button Name="Add" Content="Add" FontSize="16" Height="35" Margin="10,10,10,10" Click="Add_Click"/>
                 <Button Name="Modify" Content="Modify" FontSize="16" Height="35" Margin="10,10,10,10" Click="Modify_Click"/>
                 <Button Name="Remove" Content="Remove" FontSize="16" Height="35" Margin="10,10,10,10" Click="Remove_Click"/>
             </StackPanel>
-        <ListView Name="ParticipantsList" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Extended" Grid.Column="0" Loaded="ParticipantsList_Loaded">
+        <ListView Name="ParticipantsList" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Extended" Grid.Column="0" Loaded="ParticipantsList_Loaded" MouseDoubleClick="ParticipantsList_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Bib" DisplayMemberBinding="{Binding Bib}" />
