--- a/EventDirector/UI/MainPages/TimingPage.xaml
+++ b/EventDirector/UI/MainPages/TimingPage.xaml
@@ -25,7 +25,7 @@
                     <xctk:MaskedTextBox Name="StartTime" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" Width="100" Height="25" VerticalAlignment="Center" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Margin="80,0,0,0" FontWeight="Bold" FontSize="16" KeyDown="StartTimeKeyDown" LostFocus="StartTimeLostFocus"/>
                 </Grid>
                 <Button Name="StartRace" Content="Start Race" Width="150" Height="25" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="0,8,0,0" Click="StartRaceClick" />
-                <Button Name="EditSelectedButton" Content="Edit Selected" Width="150" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="EditSelected" IsEnabled="False"/>
+                <Button Name="WaveButton" Content="Set Wave Times" Width="150" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="ChangeWaves"/>
                 <Button Content="Manual Entry" Width="150" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="ManualEntry" IsEnabled="True"/>
                 <Button Content="Load Log" Width="150" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" Click="LoadLog" IsEnabled="True" />
                 <TextBox Name="searchBox" Width="150" Height="25" HorizontalAlignment="Center" Margin="0,15,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="SearchBox_TextChanged"/>
