--- a/EventDirector/UI/MainPages/ChipAssigmentPage.xaml
+++ b/EventDirector/UI/MainPages/ChipAssigmentPage.xaml
@@ -37,11 +37,11 @@
                         <Label Content="Assign Single" FontSize="20" Margin="10,5,10,0" HorizontalContentAlignment="Center"/>
                         <DockPanel>
                             <Label Content="Bib" Margin="10,0,10,0" FontSize="16" HorizontalContentAlignment="Right" Width="50"/>
-                            <TextBox Name="SingleBibBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandler"/>
+                            <TextBox Name="SingleBibBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandlerSingle" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
                         </DockPanel>
                         <DockPanel>
                             <Label Content="Chip" Margin="10,0,10,0" FontSize="16" HorizontalContentAlignment="Right" Width="50"/>
-                            <TextBox Name="SingleChipBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandler"/>
+                            <TextBox Name="SingleChipBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandlerSingle" PreviewTextInput="ChipValidation" GotFocus="SelectAll"/>
                         </DockPanel>
                         <Button Name="SaveSingleButton" Content="Save Single" MaxWidth="150" Click="SaveSingleButton_Click" Margin="10,10,10,10" Height="35" FontSize="16"/>
                         <Separator/>
@@ -58,8 +58,8 @@
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
                             <Label Content="Bib" Margin="0,0,0,0" FontSize="16" HorizontalContentAlignment="Right" Grid.Column="0"/>
-                            <TextBox Name="RangeStartBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandler" TextChanged="UpdateEndChip"/>
-                            <TextBox Name="RangeEndBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="2" KeyDown="KeyPressHandler" TextChanged="UpdateEndChip"/>
+                            <TextBox Name="RangeStartBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
+                            <TextBox Name="RangeEndBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="2" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -68,7 +68,7 @@
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
                             <Label Content="Chip" Margin="0,0,0,0" FontSize="16" HorizontalContentAlignment="Right" Grid.Column="0"/>
-                            <TextBox Name="RangeStartChipBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandler" TextChanged="UpdateEndChip"/>
+                            <TextBox Name="RangeStartChipBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="ChipValidation" GotFocus="SelectAll"/>
                             <Label Name="RangeEndChipLabel" FontSize="16" Margin="5,0,5,0" Grid.Column="2"/>
                         </Grid>
                         <Button Name="SaveRangeButton" Content="Save Range" Width="150" Click="SaveRangeButton_Click" Margin="0,10,0,10" Height="35" FontSize="16"/>
