Added the ability to delete reads from the raw data. Changed "Deleted" to "Ignored" as the display text of ChipRead's status. Modified how TimingWorker processes reads for a Distance based result so that we can't *accidentally* get multiple occurrences at a single spot, nor will a person be able to come in before an occurrence and get a time less than that of their previous occurrence.

--- a/EventDirector/UI/Timing/TimingRawReadsPage.xaml
+++ b/EventDirector/UI/Timing/TimingRawReadsPage.xaml
@@ -28,9 +28,10 @@
             </ListView.View>
         </ListView>
         <DockPanel LastChildFill="False" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Name="IgnoreButton" Content="Ignore Reads" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
-            <Button Name="Shift" Content="Edit" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="Shift_Click" />
-            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="150" Margin="5,5,5,5" Click="DoneButton_Click"/>
+            <Button Name="DeleteButton" Content="Delete" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DeleteButton_Click"/>
+            <Button Name="IgnoreButton" Content="Ignore" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
+            <Button Name="Shift" Content="Edit" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="Shift_Click" />
+            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DoneButton_Click"/>
         </DockPanel>
     </Grid>
 </Page>
