--- a/EventDirector/UI/MainPages/SegmentsPage.xaml
+++ b/EventDirector/UI/MainPages/SegmentsPage.xaml
@@ -6,18 +6,16 @@
       xmlns:local="clr-namespace:EventDirector.UI.MainPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SegmentsPage">
+      Title="SegmentsPage" Loaded="Page_Loaded">
 
     <Grid>
         <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
         <Grid Name="everything">
             <Grid.RowDefinitions>
-                <RowDefinition Height="55" Name="DivisionRow"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <ComboBox Name="Divisions" FontSize="16" Margin="10,10,10,10" Height="35" Width="250" SelectionChanged="Divisions_SelectionChanged" VerticalContentAlignment="Center"/>
-            <ListBox Name="SegmentsBox" KeyboardNavigation.TabNavigation="Continue" Grid.Row="1">
+            <ListBox Name="SegmentsBox" KeyboardNavigation.TabNavigation="Continue" Grid.Row="0">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -25,8 +23,7 @@
                     </Style>
                 </ListBox.ItemContainerStyle>
             </ListBox>
-            <DockPanel HorizontalAlignment="Center" Grid.Row="2">
-                <Button Name="Add" Content="Add Segment" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
+            <DockPanel HorizontalAlignment="Center" Grid.Row="1">
                 <Button Name="UpdateBtn" Content="Update" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Update_Click" />
                 <Button Name="ResetBtn" Content="Reset" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Reset_Click" />
             </DockPanel>
