You can now pull a participant from the database knowing their event specific id and event id. We now can modify participants by double clicking their results on the Timing Page.

--- a/EventDirector/UI/Timing/TimingResultsPage.xaml
+++ b/EventDirector/UI/Timing/TimingResultsPage.xaml
@@ -9,7 +9,7 @@
       Title="TimingResultsPage">
 
     <Grid>
-        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Loaded="UpdateListView_Loaded" HorizontalContentAlignment="Center" FontSize="12">
+        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Loaded="UpdateListView_Loaded" HorizontalContentAlignment="Center" FontSize="12" MouseDoubleClick="UpdateListView_MouseDoubleClick">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Loc" Width="70" DisplayMemberBinding="{Binding LocationName}" />
